Dynamic Signal Acquisition DAQ (DSA)/PCI_PXI-9527/C_C++/AIO_SNR_THD/DSA-Dask.h

//--------------------------------//
//         DASK Data Types        //
//--------------------------------//
typedef unsigned char  U8;
typedef short          I16;
typedef unsigned short U16;
typedef long           I32;
typedef unsigned long  U32;
typedef double         F64;
//--------------------------------//
//  DSA-DASK Function prototype   //
//--------------------------------//
/* Basic Function */
I16 __stdcall DSA_Register_Card(U16 CardType, U16 card_num);
I16 __stdcall DSA_Release_Card(U16 CardNumber);
I16 __stdcall DSA_SetTimebase(U16 CardNumber, U32 ClockSrc);
I16 __stdcall DSA_ConfigSpeedRate(U16 wCardNumber,	U16 Function, U16 Setting, F64 SetDemandRate, F64 *GetActualRate);
/* AI Function */
I16 __stdcall DSA_AI_9527_ConfigChannel(U16 CardNumber, U16 Channel, U16 AdRange, U16 ConfigCtrl, BOOLEAN AutoResetBuf);
I16 __stdcall DSA_AI_9529_ConfigChannel(U16 CardNumber, U16	Channel, BOOLEAN Enable, U16 wAdRange, U16 ConfigCtrl);
I16 __stdcall DSA_AI_9527_ConfigSampleRate(U16 wCardNumber, F64 SetDemandRate, F64 *GetActualRate);
I16 __stdcall DSA_AI_AsyncCheck(U16 CardNumber, BOOLEAN *Stopped, U32 *AccessCnt);
I16 __stdcall DSA_AI_AsyncClear(U16 CardNumber, U32 *AccessCnt);
I16 __stdcall DSA_AI_AsyncDblBufferHalfReady(U16 CardNumber, BOOLEAN *HalfReady, BOOLEAN *StopFlag);
I16 __stdcall DSA_AI_AsyncDblBufferHandled(U16 CardNumber);
I16 __stdcall DSA_AI_AsyncDblBufferMode(U16 CardNumber, BOOLEAN Enable);
I16 __stdcall DSA_AI_AsyncDblBufferOverrun(U16 CardNumber, U16 op, U16 *overrunFlag);
I16 __stdcall DSA_AI_AsyncDblBufferToFile(U16 CardNumber);
I16 __stdcall DSA_AI_AsyncReTrigNextReady(U16 CardNumber, BOOLEAN *Ready, BOOLEAN *StopFlag, U16 *RdyTrigCnt);
I16 __stdcall DSA_AI_ContBufferReset(U16 CardNumber);
I16 __stdcall DSA_AI_ContBufferSetup(U16 CardNumber, void *Buffer, U32 ReadCount, U16 *BufferId);
I16 __stdcall DSA_AI_ContReadChannel(U16 CardNumber, U16 Channel, U16 AdRange, U16 *Buffer, U32 ReadCount, F64 SampleRate, U16 SyncMode);
I16 __stdcall DSA_AI_ContReadChannelToFile(U16 CardNumber, U16 Channel, U16 AdRange, U8 *FileName, U32 ReadCount, F64 SampleRate, U16 SyncMode);
I16 __stdcall DSA_AI_ContStatus(U16 CardNumber, U16 *Status);
I16 __stdcall DSA_AI_ContVScale(U16 CardNumber, U16 adRange, void *readingArray, F64 *voltageArray, I32 count);
I16 __stdcall DSA_AI_DataScaler(U16 cardType, U16 adRange, void *readingArray, F64 *voltageArray, I32 count);
I16 __stdcall DSA_AI_EventCallBack(U16 CardNumber, I16 mode, I16 EventType, U32 callbackAddr);
I16 __stdcall DSA_AI_InitialMemoryAllocated(U16 CardNumber, U32 *MemSize);
I16 __stdcall DSA_AI_SetTimeOut(U16 CardNumber, U32 TimeOut);
/* AO Function */
I16 __stdcall DSA_AO_9527_ConfigChannel(U16 CardNumber, U16 Channel, U16 AdRange, U16 ConfigCtrl, BOOLEAN AutoResetBuf);
I16 __stdcall DSA_AO_9527_ConfigSampleRate(U16 wCardNumber, F64 SetDemandRate, F64 *GetActualRate);
I16 __stdcall DSA_AO_AsyncCheck(U16 CardNumber, BOOLEAN *Stopped, U32 *AccessCnt);
I16 __stdcall DSA_AO_AsyncClear(U16 CardNumber, U32 *AccessCnt, U16 stop_mode);
I16 __stdcall DSA_AO_AsyncDblBufferHalfReady(U16 CardNumber, BOOLEAN *bHalfReady);
I16 __stdcall DSA_AO_AsyncDblBufferMode(U16 CardNumber, BOOLEAN Enable);
I16 __stdcall DSA_AO_ContBufferReset(U16 CardNumber);
I16 __stdcall DSA_AO_ContBufferSetup(U16 CardNumber, void *Buffer, U32 WriteCount, U16 *BufferId);
 
I16 __stdcall DSA_AO_ContStatus(U16 CardNumber, U16	 *Status);
I16 __stdcall DSA_AO_ContWriteChannel(U16 CardNumber, U16 Channel, U16 BufId, U32 WriteCount, U32 Iterations, U32 dwInterval, U16 definite, U16 SyncMode);
I16 __stdcall DSA_AO_EventCallBack(U16 CardNumber, I16 mode, I16 EventType, U32 callbackAddr);
I16 __stdcall DSA_AO_InitialMemoryAllocated(U16 CardNumber, U32 *MemSize);
I16 __stdcall DSA_AO_SetTimeOut(U16 CardNumber, U32 TimeOut);
I16 __stdcall DSA_AO_VoltScale(U16 CardNumber, U16 Channel, F64 Voltage, I32 *binValue);
/* Trigger Function */
I16 __stdcall DSA_TRG_Config(U16 CardNumber, U16 FuncSel, U16 TrigCtrl, U32 ReTriggerCnt, U32 TriggerDelay);
I16 __stdcall DSA_TRG_ConfigAnalogTrigger(U16 CardNumber, U32 ATrigSrc, U32 ATrigMode, F64 Threshold);
I16 __stdcall DSA_TRG_SoftTriggerGen(U16 CardNumber);
I16 __stdcall DSA_TRG_SourceConn(U16 CardNumber, U16 sigCode);
I16 __stdcall DSA_TRG_SourceDisConn(U16 CardNumber, U16 sigCode);
I16 __stdcall DSA_TRG_SourceClear(U16 CardNumber);
/* Multi-Card Sync Function */
I16 __stdcall DSA_SYN_ConfigMultiCard(U16 wCardNumber, U16 Function, U32 Parameter);
I16 __stdcall DSA_SYN_CheckMultiCardStatus(U16 wCardNumber,	U16 *Status);
I16 __stdcall DSA_SYN_SyncStart(U16 wCardNumber);
/* Common Function */
I16 __stdcall DSA_GetActualRate(U16 CardNumber, F64 SampleRate, F64 *ActualRate);
I16 __stdcall DSA_GetBaseAddr(U16 CardNumber, U32 *BaseAddr, U32 *BaseAddr2);
I16 __stdcall DSA_GetLCRAddr(U16 CardNumber, U32 *LcrAddr);
I16 __stdcall DSA_GetFPGAVersion(U16 CardNumber, U32 *FPGAVersion);
/* Calibration Function */
I16 __stdcall DSA_Auto_Calibration_ALL(U16 CardNumber);
I16 __stdcall DSA_CAL_SetDefaultBank(U16 CardNumber, U16 bank);
I16 __stdcall DSA_CAL_SaveToUserBank(U16 CardNumber, U16 bank);
I16 __stdcall DSA_CAL_LoadFromBank(U16 CardNumber, U16 bank);