Dynamic Signal Acquisition DAQ (DSA)/PCIe_PXIe-9529/C#/AI_ACQ_Event/DSA-Dask.cs


    /*----------------------------------------------------------------------------*/
    /* DSA-DASK Function prototype                                                */
    /*----------------------------------------------------------------------------*/
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_Register_Card (ushort CardType, ushort card_num);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_Release_Card (ushort CardNumber);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_SetTimebase (ushort CardNumber, uint ClockSrc);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_ConfigSpeedRate (ushort CardNumber, ushort Func, ushort Setting, double SetDemandRate, out double GetActualRate);
    /*---------------------------------------------------------------------------*/
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_9527_ConfigChannel (ushort CardNumber, ushort Channel, ushort AdRange, ushort ConfigCtrl, bool AutoResetBuf);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_9529_ConfigChannel (ushort CardNumber, ushort Channel, bool Enable, ushort AdRange, ushort ConfigCtrl);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_9527_ConfigSampleRate (ushort CardNumber, double SetDemandRate, out double GetActualRate);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_AsyncCheck (ushort CardNumber, out bool Stopped, out uint AccessCnt);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_AsyncClear (ushort CardNumber, out uint AccessCnt);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_AsyncDblBufferHalfReady (ushort CardNumber, out bool HalfReady, out bool StopFlag);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_AsyncDblBufferHandled (ushort CardNumber);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_AsyncDblBufferMode (ushort CardNumber, bool Enable);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_AsyncDblBufferOverrun (ushort CardNumber, ushort op, out ushort overrunFlag);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_AsyncDblBufferToFile (ushort CardNumber);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_AsyncReTrigNextReady (ushort CardNumber, out bool Ready, out bool StopFlag, out ushort RdyTrigCnt);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_ContBufferReset (ushort CardNumber);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_ContBufferSetup (ushort CardNumber, IntPtr Buffer, uint ReadCount, out ushort BufferId);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_ContReadChannel (ushort CardNumber, ushort Channel, ushort AdRange, uint[] BufferId, uint ReadCount, double SampleRate, ushort SyncMode);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_ContReadChannelToFile (ushort CardNumber, ushort Channel, ushort AdRange, string FileName, uint ReadCount, double SampleRate, ushort SyncMode);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_ContStatus (ushort CardNumber, out ushort Status);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_ContVScale (ushort CardNumber, ushort adRange, IntPtr readingArray, double[] voltageArray, int count);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_DataScaler (ushort cardType, ushort adRange, IntPtr readingArray, double[] voltageArray, int count);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_EventCallBack (ushort CardNumber, ushort mode, ushort EventType, CallbackDelegate callbackAddr);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_InitialMemoryAllocated (ushort CardNumber, out uint MemSize);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_SetTimeOut (ushort CardNumber, uint TimeOut);
    /*---------------------------------------------------------------------------*/
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_9527_ConfigChannel (ushort CardNumber, ushort Channel, ushort AdRange, ushort ConfigCtrl, bool AutoResetBuf);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_9527_ConfigSampleRate (ushort CardNumber, double SetDemandRate, out double GetActualRate);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_AsyncCheck (ushort CardNumber, out bool Stopped, out uint AccessCnt);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_AsyncClear (ushort CardNumber, out uint AccessCnt, ushort stop_mode);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_AsyncDblBufferHalfReady (ushort CardNumber, out bool bHalfReady);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_AsyncDblBufferMode (ushort CardNumber, bool Enable);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_ContBufferReset (ushort CardNumber);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_ContBufferSetup (ushort CardNumber, IntPtr Buffer, uint WriteCount, out ushort BufferId);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_ContStatus (ushort CardNumber, out ushort Status);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_ContWriteChannel (ushort CardNumber, ushort Channel, ushort BufId, uint WriteCount, uint Iterations, uint dwInterval, ushort definite, ushort SyncMode);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_EventCallBack (ushort CardNumber, ushort mode, ushort EventType, CallbackDelegate callbackAddr);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_InitialMemoryAllocated (ushort CardNumber, out uint MemSize);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_SetTimeOut (ushort CardNumber, uint TimeOut);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_VoltScale (ushort CardNumber, ushort Channel, double Voltage, out uint binValue);
    /*---------------------------------------------------------------------------*/
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_TRG_Config (ushort CardNumber, ushort FuncSel, ushort TrigCtrl, uint ReTriggerCnt, uint TriggerDelay);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_TRG_ConfigAnalogTrigger (ushort CardNumber, uint ATrigSrc, uint ATrigMode, double Threshold);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_TRG_SoftTriggerGen (ushort CardNumber);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_TRG_SourceConn (ushort CardNumber, ushort sigCode);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_TRG_SourceDisConn (ushort CardNumber, ushort sigCode);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_TRG_SourceClear (ushort CardNumber);
    /*---------------------------------------------------------------------------*/
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_SYN_ConfigMultiCard (ushort CardNumber, ushort Func, uint Parameter);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_SYN_CheckMultiCardStatus (ushort CardNumber, out ushort Status);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_SYN_SyncStart (ushort CardNumber);
    /*---------------------------------------------------------------------------*/
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AI_GetEvent (ushort CardNumber, out uint hEvent);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_AO_GetEvent (ushort CardNumber, out uint hEvent);
    /*---------------------------------------------------------------------------*/
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_GetActualRate (ushort CardNumber, double fSampleRate, out double fActualRate);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_GetBaseAddr (ushort CardNumber, out uint BaseAddr, out uint BaseAddr2);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_GetLCRAddr (ushort CardNumber, out uint LcrAddr);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_GetFPGAVersion (ushort CardNumber, out uint FPGAVersion);
    /*---------------------------------------------------------------------------*/
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_Auto_Calibration_ALL (ushort CardNumber);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_CAL_LoadFromBank (ushort CardNumber, ushort bank);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_CAL_SaveToUserBank (ushort CardNumber, ushort bank);
    [DllImport("DSA-Dask.dll")]
    public static extern short DSA_CAL_SetDefaultBank (ushort CardNumber, ushort bank);
    /*----------------------------------------------------------------------------*/
}
